[package]
name = "tree-sitter-xresources"
description = "Xresources grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "xresources"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ValdezFOmar/tree-sitter-xresources"
authors = ["Omar Valdez <omarantoniovaldezf2@gmail.com>"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[dev-dependencies]
tree-sitter = "0.24.2"

[build-dependencies]
cc = "1.0.87"
