[package]
name = "tree-sitter-xresources"
description = "Xresources grammar for tree-sitter"
version = "0.1.3"
authors = ["Omar Valdez <omarantoniovaldezf2@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "xresources"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/valdezfomar/tree-sitter-xresources"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.5"

[build-dependencies]
cc = "1.2.30"

[dev-dependencies]
tree-sitter = "0.25.8"
